# phoninfo_test

app/: app-release.apk  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/three/phoneinfotest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/three/phoneinfotest/: MainActivity.java  NativeMethod.java
app/src/main/jni/: CMakeLists.txt  com_three_phoneinfotest_NativeMethod.h  nativemethod.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/three/phoneinfotest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
